--- a/src/html/about.html
+++ b/src/html/about.html
@@ -10,11 +10,11 @@
         </header>
 
         <main class="m-auto">
-            <div class="flex h-full w-full items-start justify-between font-crimson-text font-semibold text-lg tracking-tight">
+            <div class="flex h-full w-full items-start justify-between font-crimson-text text-lg font-semibold tracking-tight">
                 <div class="flex h-fit w-1/2 flex-col justify-start pr-6">
-                    <p class=" text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
+                    <p class="text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
 
-                    <p class=" text-red-800 underline">Ausstellungen und Nominierungen</p>
+                    <p class="text-red-800 underline">Ausstellungen und Nominierungen</p>
                     <div class="h-4"></div>
 
                     <div>2023 – Photomatch, Fotofestiwal – Lodz, PL</div>
@@ -35,24 +35,48 @@
                 </div>
 
                 <div class="h-96 w-1/2 pl-6">
-                    <p class=" text-red-800 underline">Kontakt</p>
+                    <p class="text-red-800 underline">Kontakt</p>
                     <span><a href="mailto:brotherland@riseup.net">brotherland@riseup.net</a></span>
                     <div class="h-4"></div>
 
-                    <p class=" text-red-800 underline">Biographien</p>
+                    <p class="text-red-800 underline">Biografien</p>
                     <p>
-                        Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und Zeitgenössischer Geschichte und besuchte Lisa Barnards Masterclass an der ISSP. Thomas hat als Straßenpädagoge und Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher:in. Ihr Projekt Brotherland wurde bei Castelnuovo Fotografia (Italien), Les Boutographies (Frankreich) und Fusion Festival ausgestellt, kam auf die Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin ausgestellt.
+                        Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über
+                        zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
+                        aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und
+                        Zeitgenössischer Geschichte und besuchte Lisa Barnards Masterclass an der ISSP. Thomas hat als Straßenpädagoge und
+                        Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher:in. Ihr Projekt Brotherland wurde
+                        bei Castelnuovo Fotografia (Italien), Les Boutographies (Frankreich) und Fusion Festival ausgestellt, kam auf die
+                        Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin
+                        ausgestellt.
                     </p>
                     <div class="h-12"></div>
                     <div>Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
                     <!-- AAS -->
-                    <div class="relative w-2/3 mx-auto my-4">
-                        <img src="/public/images/Logo-AAS-1.jpg" />
+
+                    <div class="my-4 w-full">
+                        <a href="https://www.amadeu-antonio-stiftung.de/" target="_blank">
+                            <img class="mx-auto w-1/2" src="/public/images/Logo-AAS-1.jpg" />
+                        </a>
                     </div>
-                    <div>und mit der Untersützung der <a href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/">Soziale Bildung e.V. / Dokumentationszentrum „Lichtenhagen im Gedächtnis“</a></div>
+                    <div>
+                        und mit der Untersützung der
+                        <a
+                            class="w-1/2"
+                            href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/"
+                            target="_blank"
+                        >
+                            Soziale Bildung e.V. / Dokumentationszentrum „Lichtenhagen im Gedächtnis“
+                        </a>
+                    </div>
                     <!-- Dokumentationszentrum -->
-                    <div class="relative w-2/3 mx-auto mt-4">
-                        <img src="/public/images/dokzentrum-logo.jpg" />
+                    <div class="mt-4 w-full">
+                        <a
+                            href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/"
+                            target="_blank"
+                        >
+                            <img class="mx-auto w-1/2" src="/public/images/dokzentrum-logo.jpg" />
+                        </a>
                     </div>
                 </div>
             </div>
