--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -10,7 +10,7 @@
         </header>
 
         <main class="m-auto">
-            <div id="simplelightboxgallery" class="gallery grid grid-cols-4 gap-4 xl:grid-cols-5 2xl:grid-cols-6">
+            <div id="simplelightboxgallery" class="gallery [&>*]:my-auto grid grid-cols-4 gap-4 xl:grid-cols-5 2xl:grid-cols-6">
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_01.jpg" title="" class="w-full cursor-pointer" />
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_02.jpg" title="" class="w-full cursor-pointer" />
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_03.jpg" title="" class="w-full cursor-pointer" />
