--- a/src/html/interviews/intrvw_dm01.html
+++ b/src/html/interviews/intrvw_dm01.html
@@ -20,7 +20,7 @@
                 audioFilePath: "/public/audio/DM_01.mp3",
                 imageFilePath: "/public/images/DM_01.jpg",
                 imageCaption: "Hoyerswerda, 1977. Bildcredit: Bundesarchiv, Bild 183-S0412-0307 CC-BY-SA 3.0",
-                additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter (Albert-Schweitzer-Straße) und eine Gefüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
+                additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
                 prevLink: "intrvw_dhn01.html",
                 nextLink: "intrvw_dm02.html",
             },
