--- a/src/html/interviews/intrvw_dm02.html
+++ b/src/html/interviews/intrvw_dm02.html
@@ -19,8 +19,8 @@
                 authorLink: "../bio.html#macou",
                 audioFilePath: "/public/audio/DM_02.mp3",
                 imageFilePath: "/public/images/DM_02.jpg",
-                imageCaption: "Hoyerswerda 1991 - Image Courtesy of Detlev Kennerth",
-                additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter (Albert-Schweitzer-Straße) und eine Gefüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
+                imageCaption: "Hoyerswerda 1991 - Bild mit freundlicher Genehmigung von Detlev Kennerth",
+                additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
                 prevLink: "intrvw_dm01.html",
                 nextLink: "intrvw_ia01.html",
             },
