--- a/src/html/interviews/intrvw_jr02.html
+++ b/src/html/interviews/intrvw_jr02.html
@@ -37,7 +37,7 @@ Stimme gesagt hat.`,
                 authorLink: "../bio.html#jankrenek",
                 audioFilePath: "/public/audio/J_R_02.mp3",
                 imageFilePath: "/public/images/J_R_02.png",
-                imageCaption: "Filmstill aus 'The Truth Lies in Rostock'",
+                imageCaption: 'Filmstill aus "The Truth Lies in Rostock/Spectacle"',
                 additionalContext: "",
                 prevLink: "intrvw_jr01.html",
                 nextLink: "intrvw_jr03.html",
