--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
 
-                <div class="relative flex justify-between pt-44">
+                <div class="relative flex justify-between pt-60">
                     <div class="flex w-6/12 flex-col justify-between pr-20">
                         <!-- Schwimmbad -->
                         <div class="relative aspect-3/2 w-full">
@@ -104,7 +104,7 @@
                         </div>
 
                         <!-- Audio unterhalb v. Schwimmbad -->
-                        <div class="w-full translate-y-52">
+                        <div class="w-full translate-y-[195%]">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
@@ -113,7 +113,7 @@
                         </div>
                     </div>
 
-                    <div class="absolute z-10 w-full translate-y-56">
+                    <div class="absolute z-10 w-full translate-y-[200%]">
                         <!-- Audio zw. Schwimmbad & Datsche -->
                         <div class="mx-auto w-1/3">
                             <include
@@ -124,7 +124,7 @@
                         </div>
                     </div>
 
-                    <div class="w-5/12 translate-y-52 pl-4">
+                    <div class="w-5/12 translate-y-[30%] pl-4">
                         <!-- Datsche -->
                         <div class="aspect-2/3 w-full">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_012.jpg" />
@@ -132,28 +132,31 @@
                     </div>
                 </div>
 
-                <div class="relative flex h-fit w-full pb-20 pt-64">
-                    <div class="w-3/5 translate-y-56 pr-12">
-                        <!-- Baum -->
-                        <div class="aspect-2/3 w-full">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_013.jpg" />
-                        </div>
-                    </div>
-
-                    <div class="flex w-2/5 flex-col items-start justify-start">
-                        <div>
+                <div class="relative flex h-fit w-full flex-col pb-20 pt-64">
+                    <div class="flex w-full flex-col items-end justify-start">
+                        <div class="w-2/5">
                             Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die
                             sagen sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht
                             gemocht“.
+
+                            <span class="block pt-4">„Warum?“</span>
                         </div>
-                        <div class="mt-4">„Warum?“</div>
-                        <div class="flex items-center justify-between">
-                            <div class="z-10 -ml-[33rem] h-fit text-center font-roboto text-7xl font-medium text-red-700">
+                        <div class="w-full text-right">
+                            <span
+                                class="whitespace-nowrap font-roboto text-[6vw] font-medium leading-snug text-red-700 sm:text-[7.25vw] md:text-[6vw] lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
+                            >
                                 WEIL DU SCHWARZ BIST
-                            </div>
+                            </span>
                         </div>
-                        <div class="">Wir hatten Angst.</div>
-                        <div>Das war in Berlin 1982-1983.</div>
+                        <span class="block w-2/5">Wir hatten Angst.</span>
+                        <span class="block w-2/5">Das war in Berlin 1982-1983.</span>
+                    </div>
+
+                    <div class="w-3/5 -z-10 pr-12">
+                        <!-- Baum -->
+                        <div class="-translate-y-[13%] aspect-2/3 w-full">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_013.jpg" />
+                        </div>
                     </div>
                 </div>
                 <br />
