--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -23,7 +23,7 @@
                 ></a>
             </div>
 
-            <main class="mb-24 flex flex-col font-crimson-text text-xl font-bold tracking-tight">
+            <main class="mb-32 flex flex-col font-crimson-text text-xl font-bold tracking-tight">
                 <div class="flex h-fit w-full">
                     <div class="relative flex h-full basis-1/2 flex-col justify-between pr-1">
                         <!-- Audio -->
@@ -36,30 +36,36 @@
                         </div>
                         <div class="h-60"></div>
                         <!-- Steine -->
-                        <div class="relative z-10 aspect-2/3 w-full translate-x-8 overflow-hidden rounded-sm">
+                        <div class="relative z-10 aspect-2/3 w-full translate-x-[7%] overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_015.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
 
-                    <div class="ml-1 mr-4 flex h-full basis-1/2 flex-col items-center justify-between">
+                    <div class="ml-1 mr-4 flex h-fit basis-1/2 flex-col items-center justify-between">
                         <!-- Tauben-->
                         <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm pt-16">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_014.jpg" class="absolute object-cover" />
                         </div>
 
-                        <!-- Text "Meine Arbeit nehmen die.."  -->
-                        <span class="mt-24 w-4/5">
-                            „Meine Arbeit nehmen die mir jetzt weg!“. Da hatte aber niemand mehr Arbeit gehabt, weil alle waren ja
-                            arbeitlsos. Die Arbeit gab's ja gar nicht mehr.
-                        </span>
+                        <div class="h-28"></div>
 
-                        <!-- Audio "wir wollten das ja letzten endes" -->
-                        <div class="flex w-1/4">
-                            <include
-                                src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
-                            >
-                            </include>
+                        <div class="w-4/5 translate-x-[15%]">
+                            <!-- Text "Meine Arbeit nehmen die.."  -->
+                            <span>
+                                „Meine Arbeit nehmen die mir jetzt weg!“. Da hatte aber niemand mehr Arbeit gehabt, weil alle waren ja
+                                arbeitlsos. Die Arbeit gab's ja gar nicht mehr.
+                            </span>
+
+                            <div class="w-full pt-6">
+                                <!-- Audio "wir wollten das ja letzten endes" -->
+                                <div class="mx-auto flex w-3/5">
+                                    <include
+                                        src="./partials/interview_audio.html"
+                                        locals='{"audioFilePath": "../../../public/audio/02_A_D_03.mp3", "title": ""}'
+                                    >
+                                    </include>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -67,7 +73,7 @@
                 <div class="flex h-fit pt-24">
                     <div class="flex w-1/3 flex-col justify-center">
                         <!-- Audio "der Rassismus wurde noch stärker" -->
-                        <div class="flex w-full -translate-x-12">
+                        <div class="flex w-full -translate-x-[10%]">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'
@@ -77,14 +83,14 @@
                     </div>
                     <div class="flex w-2/3 flex-col justify-start">
                         <!-- Interviewpartner -->
-                        <div class="relative aspect-2/3 w-full translate-x-24 overflow-hidden rounded-sm">
+                        <div class="relative aspect-2/3 w-full translate-x-[18%] overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_016.jpg" class="absolute object-cover" />
                         </div>
                     </div>
                 </div>
 
                 <div class="relative h-fit w-full pt-24">
-                    <div class="w-4/5 -translate-x-12">
+                    <div class="w-4/5 -translate-x-[10%]">
                         <span class="z-20 text-justify font-roboto text-7xl font-medium text-red-700"
                             >DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span
                         >
@@ -93,7 +99,7 @@
                         <div class="flex w-1/5 pt-2">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
+                                locals='{"audioFilePath": "../../../public/audio/04_OT_05.mp3", "title": ""}'
                             >
                             </include>
                         </div>
@@ -101,23 +107,23 @@
                     <div class="relative -z-10 flex h-fit justify-center">
                         <div class="w-3/5">
                             <!-- Nahaufnahme Interviewpartner -->
-                            <div class="aspect-2/3 w-full -translate-y-64 overflow-hidden rounded-sm">
+                            <div class="aspect-2/3 w-full -translate-y-[28%] overflow-hidden rounded-sm">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_017.jpg" class="object-cover" />
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="-mx-20 flex h-fit -translate-y-40">
+                <div class="-mx-20 flex h-fit -translate-y-[25%]">
                     <div class="flex basis-1/2 flex-col justify-between pr-20">
                         <!-- Fresse 1 -->
-                        <div class="relative aspect-3/2 w-full -translate-y-40 overflow-hidden rounded-sm">
+                        <div class="relative aspect-3/2 w-full -translate-y-[40%] overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_018.jpg" class="object-cover" />
                             <span class="absolute w-full text-left text-xs">mit freundlicher Genehmigung von Christian Ditsch</span>
                         </div>
 
                         <!-- Text "Meine Arbeit nehmen die.."  -->
-                        <span class="w-10/12 translate-x-24 translate-y-48">
+                        <span class="w-10/12 translate-x-[20%] translate-y-full">
                             Dass Deutschland einig wird, das hört man schon '89... vom Fernsehen und von der Straße, die Deutschen
                             unterhalten sich manchmal. Ich hatte dafür keinen Kopf... Ich war jetzt arbeitslos, ich musste irgendwas
                             versuchen um weiter Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich nicht.
@@ -125,13 +131,13 @@
                         </span>
                     </div>
 
-                    <div class="flex basis-1/2 translate-y-24 flex-col justify-end pl-20">
+                    <div class="flex basis-1/2 translate-y-[20%] flex-col justify-end pl-20">
                         <!-- Fresse 2 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_019.jpg" class="object-cover" />
                             <span class="absolute w-full text-right text-xs">mit freundlicher Genehmigung von Christian Ditsch</span>
                         </div>
-                        <div class="h-8"></div>
+                        <div class="h-6"></div>
                         <!-- Fresse 3 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_020.jpg" class="object-cover" />
@@ -140,38 +146,38 @@
                     </div>
                 </div>
 
-                <div class="-mx-20 flex h-fit">
-                    <div class="flex w-[45%] flex-col items-center pr-12 justify-center">
-                        <div class="mt-auto h-1/3"></div>
+                <div class="-mx-20 flex h-fit translate-y-[3%]">
+                    <div class="flex w-[45%] flex-col items-center justify-between pr-12">
+                        <div class="mt-auto h-[70%]"></div>
 
                         <!-- Autobrand -->
-                        <div class=" aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_022.jpg" class=" object-cover" />
+                        <div class="aspect-2/3 w-full rounded-sm">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_022.jpg" class="object-cover" />
                         </div>
 
                         <div class="mb-auto h-1/3"></div>
                     </div>
 
-                    <div class="-mr-8 flex w-[55%] pl-8 flex-col justify-between pt-24">
+                    <div class="-mr-8 flex w-[55%] flex-col justify-between pl-8 pt-24">
                         <div class="relative">
                             <!-- Bauzaun -->
                             <div class="aspect-2/3 w-full overflow-hidden rounded-sm">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_021.jpg" class="object-cover" />
                             </div>
 
-                            <div class="absolute top-0 translate-y-2/3 z-20  mx-auto h-full w-full">
-                                    <!-- Audio "wir wollten das ja letzten endes" -->
-                                    <div class="m-auto flex w-4/5">
-                                        <include
-                                            src="./partials/interview_audio.html"
-                                            locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
-                                        >
-                                        </include>
-                                    </div>
+                            <div class="absolute top-0 z-20 mx-auto h-full w-full translate-y-2/3">
+                                <!-- Audio "wir wollten das ja letzten endes" -->
+                                <div class="m-auto flex w-2/3">
+                                    <include
+                                        src="./partials/interview_audio.html"
+                                        locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
+                                    >
+                                    </include>
                                 </div>
+                            </div>
                         </div>
 
-                        <span class="mx-auto w-3/4 pt-32 text-left">
+                        <span class="mx-auto w-4/5 pt-32 text-left">
                             Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von
                             drüben und haben uns erstmal geschult. Wir mussten praktisch die Ausbildung nochmal neu machen damit wir
                             überhaupt weiter arbeiten durften. Das fand ich so echt prägend und auch... auch so verletztend. Wir hatten ja
