--- a/src/html/about.html
+++ b/src/html/about.html
@@ -25,11 +25,12 @@
                     </div>
                     <div>2022 – Pop-Up Ausstellung, Mahalle – Berlin</div>
                     <div>2022 – Pop-Up Ausstellung, Fusion Festival – Lärz</div>
+                    <div>2022 – Die DDR schien mir eine Verheissung – Pop-Up Ausstellung - Dresden</div>
                     <div>2022 – Book Nook, Rucka Art – Cesis, LV</div>
                     <div>2022 – Solo-Exhibition, Peter-Weiss-Haus – Rostock</div>
                     <div>2022 – Solo-Exhibition, Hors les Murs, Maison de Heidelberg – Montpellier, FR</div>
                     <div>2022 – Video Projections, Les Boutographies – Montpellier, FR</div>
-                    <div>2022 – Pop-Up Ausstellung – Dresden</div>
+                    <div>2022 – In Gedenken an Jorge Gomondai - Pop-Up Ausstellung – Dresden</div>
                     <div>2021 – Portfolio Reviews, Encontros da Imagem – Braga, PT</div>
                     <div>2021 – Landscapes of the Futures, Castelnuovo Fotografia – Castelnuovo di Porto, Rom, IT</div>
                 </div>
@@ -45,7 +46,7 @@
                         zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
                         aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und
                         Zeitgenössischer Geschichte und besuchte Lisa Barnards Masterclass an der ISSP. Thomas hat als Straßenpädagoge und
-                        Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher:in. Ihr Projekt Brotherland wurde
+                        Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher. Ihr Projekt Brotherland wurde
                         bei Castelnuovo Fotografia (Italien), Les Boutographies (Frankreich) und Fusion Festival ausgestellt, kam auf die
                         Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin
                         ausgestellt.
