--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -9,7 +9,7 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "exhibits"}'></include>
         </header>
 
-        <main class="m-auto">
+        <main class="m-auto mb-24">
             <div id="simplelightboxgallery" class="gallery [&>*]:my-auto grid grid-cols-4 gap-4 xl:grid-cols-5 2xl:grid-cols-6">
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_01.jpg" title="" class="w-full cursor-pointer" />
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_02.jpg" title="" class="w-full cursor-pointer" />
