--- a/src/html/interviews/intrvw_ajm02.html
+++ b/src/html/interviews/intrvw_ajm02.html
@@ -20,7 +20,7 @@ keinen Unterschied. Das war früher Sklaverei und jetzt ist sie modern.`,
                 imageCaption: "Vertragsarbeiter aus Mosambik 1987 in Mittweida. Bildcredit: Bundesarchiv, Bild 183-1987-0618-301/CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_ajm01.html",
-                nextLink: "intrvw_ajm03.html",
+                nextLink: "intrvw_ot02.html",
             },
         };
     </script>
