--- a/src/html/interviews/intrvw_ajm03.html
+++ b/src/html/interviews/intrvw_ajm03.html
@@ -27,8 +27,8 @@ haben gesehen, nicht nur die Neger, sonder auch die Fitschis, so genannt die Vie
                 imageFilePath: "/public/images/AJM_03.jpg",
                 imageCaption: "Rückkehr nach Angola, Eberswalde 1990. Aus dem Archiv von Augusto Jone Munjunga",
                 additionalContext: "",
-                prevLink: "intrvw_ajm02.html",
-                nextLink: "intrvw_ajm04.html",
+                prevLink: "intrvw_mm01.html",
+                nextLink: "intrvw_dm02.html",
             },
         };
     </script>
