--- a/src/html/interviews/intrvw_ajm04.html
+++ b/src/html/interviews/intrvw_ajm04.html
@@ -19,8 +19,8 @@ war.`,
                 imageFilePath: "/public/images/AJM_04.jpg",
                 imageCaption: "Rückkehr nach Angola, Eberswalde 1990. Aus dem Archiv von Augusto Jone Munjunga",
                 additionalContext: "",
-                prevLink: "intrvw_ajm03.html",
-                nextLink: "intrvw_dhn01.html",
+                prevLink: "intrvw_ks01.html",
+                nextLink: "intrvw_dm01.html",
             },
         };
     </script>
