--- a/src/html/interviews/intrvw_dhn01.html
+++ b/src/html/interviews/intrvw_dhn01.html
@@ -24,8 +24,8 @@ hat und die ganze Zeit daran denken muss, was esse ich morgen,
                 imageFilePath: "/public/images/DHN_01.jpg",
                 imageCaption: "Karl-Marx-Stadt jetzt Chemnitz, 1979. Bildcredit: Bundesarchiv, Bild 183-U0530-0019 / CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_ajm04.html",
-                nextLink: "intrvw_dm01.html",
+                prevLink: "intrvw_mm03.html",
+                nextLink: "intrvw_ajm01.html",
             },
         };
     </script>
