--- a/src/html/interviews/intrvw_dm01.html
+++ b/src/html/interviews/intrvw_dm01.html
@@ -21,8 +21,8 @@
                 imageFilePath: "/public/images/DM_01.jpg",
                 imageCaption: "Hoyerswerda, 1977. Bildcredit: Bundesarchiv, Bild 183-S0412-0307 CC-BY-SA 3.0",
                 additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
-                prevLink: "intrvw_dhn01.html",
-                nextLink: "intrvw_dm02.html",
+                prevLink: "intrvw_ajm04.html",
+                nextLink: "intrvw_jr02.html",
             },
         };
     </script>
