--- a/src/html/interviews/intrvw_dm02.html
+++ b/src/html/interviews/intrvw_dm02.html
@@ -21,8 +21,8 @@
                 imageFilePath: "/public/images/DM_02.jpg",
                 imageCaption: "Hoyerswerda 1991 - Bild mit freundlicher Genehmigung von Detlev Kennerth",
                 additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
-                prevLink: "intrvw_dm01.html",
-                nextLink: "intrvw_ia01.html",
+                prevLink: "intrvw_ajm03.html",
+                nextLink: "intrvw_mm02.html",
             },
         };
     </script>
