--- a/src/html/interviews/intrvw_ia01.html
+++ b/src/html/interviews/intrvw_ia01.html
@@ -27,8 +27,8 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
                 imageFilePath: "/public/images/IA_01.jpg",
                 imageCaption: "Berlin-Friedrichsfelde. Postkarte der 80er Jahre",
                 additionalContext: "",
-                prevLink: "intrvw_dm02.html",
-                nextLink: "intrvw_ia02.html",
+                prevLink: "intrvw_jr01.html",
+                nextLink: "intrvw_ot01.html",
             },
         };
     </script>
