--- a/src/html/interviews/intrvw_ia02.html
+++ b/src/html/interviews/intrvw_ia02.html
@@ -23,8 +23,8 @@ die Nachfolger von Hitler.`,
                 imageCaption:
                     "Neonazis auf einer Montagsdemonstration in Leipzig, 1990. Bildcredit: Bundesarchiv, Bild 183-1990-0115-032 / Kluge, Wolfgang /CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_ia01.html",
-                nextLink: "intrvw_jr01.html",
+                prevLink: "intrvw_ot01.html",
+                nextLink: "intrvw_ot03.html",
             },
         };
     </script>
