--- a/src/html/interviews/intrvw_jr01.html
+++ b/src/html/interviews/intrvw_jr01.html
@@ -20,8 +20,8 @@ Kontakt gewollt mit den Ausländern.`,
                 imageFilePath: "/public/images/J_R_01.jpg",
                 imageCaption: "Eberswalde, 80er Jahre. Aus dem Archiv von Augusto Jone Munjunga",
                 additionalContext: "",
-                prevLink: "intrvw_ia02.html",
-                nextLink: "intrvw_jr02.html",
+                prevLink: "intrvw_ot02.html",
+                nextLink: "intrvw_ia01.html",
             },
         };
     </script>
