--- a/src/html/interviews/intrvw_jr02.html
+++ b/src/html/interviews/intrvw_jr02.html
@@ -39,8 +39,8 @@ Stimme gesagt hat.`,
                 imageFilePath: "/public/images/J_R_02.png",
                 imageCaption: 'Filmstill aus "The Truth Lies in Rostock/Spectacle"',
                 additionalContext: "",
-                prevLink: "intrvw_jr01.html",
-                nextLink: "intrvw_jr03.html",
+                prevLink: "intrvw_dm01.html",
+                nextLink: "intrvw_ls01.html",
             },
         };
     </script>
