--- a/src/html/interviews/intrvw_jr03.html
+++ b/src/html/interviews/intrvw_jr03.html
@@ -19,8 +19,8 @@ hat, dass ich umgedacht habe.`,
                 imageFilePath: "/public/images/J_R_03.jpg",
                 imageCaption: "Postkarte aus den 80er Jahren",
                 additionalContext: "In der Nacht auf den 23. November 1992 gab es in Mölln einen Brandanschlag auf zwei von türkischen Familien bewohnte Häuser mit drei Todesopfern und neun Schwerverletzten.",
-                prevLink: "intrvw_jr02.html",
-                nextLink: "intrvw_ks01.html",
+                prevLink: "intrvw_ls01.html",
+                nextLink: "intrvw_mm03.html",
             },
         };
     </script>
