--- a/src/html/interviews/intrvw_ks01.html
+++ b/src/html/interviews/intrvw_ks01.html
@@ -54,8 +54,8 @@ wurde. Für mich war das nicht so, ich habe eine andere Sicht.`,
                 imageCaption: "Eberswalde, 90er Jahre. Aus dem Archiv von Augusto Jone Munjunga",
                 additionalContext:
                     "Amadeu Antonio Kiowa kam 1987 als Vertragsarbeiter in die DDR und arbeitet im SVKE - Schlacht- und Verarbeitungskominat Eberswalde. In der Nacht vom 24. November 1990 wird Amadeu Antonio von Neonazis in Eberswalde überfallen und verstirbt am 6. Dezember. Er war eines der ersten Todesopfer rassistischer Gewalt im wiedervereinigten Deutschland.",
-                prevLink: "intrvw_jr03.html",
-                nextLink: "intrvw_ls01.html",
+                prevLink: "intrvw_mm02.html",
+                nextLink: "intrvw_ajm04.html",
             },
         };
     </script>
