--- a/src/html/interviews/intrvw_ls01.html
+++ b/src/html/interviews/intrvw_ls01.html
@@ -20,8 +20,8 @@
                 imageCaption: 'Filmstill aus "The Truth Lies in Rostock"',
                 additionalContext:
                     "August 1992: In Rostock-Lichtenhagen wurden das Wohnheim ehemaliger vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen. Steine und Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten sich mehrere hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.",
-                prevLink: "intrvw_ks01.html",
-                nextLink: "intrvw_mm01.html",
+                prevLink: "intrvw_jr02.html",
+                nextLink: "intrvw_jr03.html",
             },
         };
     </script>
