--- a/src/html/interviews/intrvw_mm01.html
+++ b/src/html/interviews/intrvw_mm01.html
@@ -25,8 +25,8 @@ eine Katastrophe.`,
                 imageCaption: "CDU-Wahlplakat, Stadtwahl Bremen, 1991. Bildcredit: KAS/ACDP 10-005 : 602 CC-BY-SA 3.0 DE",
                 additionalContext:
                     "",
-                prevLink: "intrvw_ls01.html",
-                nextLink: "intrvw_mm02.html",
+                prevLink: "intrvw_ot03.html",
+                nextLink: "intrvw_ajm03.html",
             },
         };
     </script>
