--- a/src/html/interviews/intrvw_mm02.html
+++ b/src/html/interviews/intrvw_mm02.html
@@ -24,8 +24,8 @@ für uns, sehr sehr schwer für uns.`,
                 imageCaption: "Amadeu Antonio Kiowa, 80er Jahre. Aus dem Archiv von Augusto Jone Munjunga",
                 additionalContext:
                     "Amadeu Antonio Kiowa kam 1987 als Vertragsarbeiter in die DDR und arbeitet im SVKE - Schlacht- und Verarbeitungskominat Eberswalde. In der Nacht vom 24. November 1990 wird Amadeu Antonio von Neonazis in Eberswalde überfallen und verstirbt am 6. Dezember. Er war einer der ersten Todesopfer rassistischer Gewalt im wiedervereinigten Deutschland.",
-                prevLink: "intrvw_mm01.html",
-                nextLink: "intrvw_mm03.html",
+                prevLink: "intrvw_dm02.html",
+                nextLink: "intrvw_ks01.html",
             },
         };
     </script>
