--- a/src/html/interviews/intrvw_ot01.html
+++ b/src/html/interviews/intrvw_ot01.html
@@ -21,8 +21,8 @@ die Mosambikaner oder so.`,
                 imageFilePath: "/public/images/OT_01.jpg",
                 imageCaption: "Arbeiter vom Kombinat ‚Schwarze Pumpe‘. Bildcredit: Bundesarchiv, Bild 183-32626-0012 CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_mm03.html",
-                nextLink: "intrvw_ot02.html"
+                prevLink: "intrvw_ia01.html",
+                nextLink: "intrvw_ia02.html"
             },
         };
     </script>
