--- a/src/html/interviews/intrvw_ot02.html
+++ b/src/html/interviews/intrvw_ot02.html
@@ -13,8 +13,8 @@
                 imageFilePath: "/public/images/OT_02.jpg",
                 imageCaption: "Chemiewerk in Leipzig, 1982. Bildcredit: Bundesarchiv, Bild 183-1982-0528-002 / Grubitzsch (geb. Raphael), Waltraud / CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_ot01.html",
-                nextLink: "intrvw_ot03.html",
+                prevLink: "intrvw_ajm02.html",
+                nextLink: "intrvw_jr01.html",
             },
         };
     </script>
