--- a/src/html/interviews/intrvw_ot03.html
+++ b/src/html/interviews/intrvw_ot03.html
@@ -13,8 +13,8 @@
                 imageFilePath: "/public/images/OT_03.jpg",
                 imageCaption: "Hoyerswerda, 1960. Bildcredit: Bundesarchiv, Bild 183-75760-0006 / CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_ot02.html",
-                nextLink: "intrvw_ajm01.html",
+                prevLink: "intrvw_ia02.html",
+                nextLink: "intrvw_mm01.html",
             },
         };
     </script>
