--- a/src/html/interviews/intrvw_ajm01.html
+++ b/src/html/interviews/intrvw_ajm01.html
@@ -36,7 +36,7 @@ nur, weil keine andere Möglichkeit.`,
                 imageFilePath: "/public/images/AJM_01.jpg",
                 imageCaption: "VEB Fleischkombinat Berlin, 1985. Aus dem Archiv von Ibraimo Alberto",
                 additionalContext: "",
-                prevLink: "intrvw_ot03.html",
+                prevLink: "intrvw_dhn01.html",
                 nextLink: "intrvw_ajm02.html",
             },
         };
