--- a/src/html/interviews/intrvw_mm03.html
+++ b/src/html/interviews/intrvw_mm03.html
@@ -17,8 +17,8 @@ Neonazis oder gegen Ausländerfeindlichkeit zu tun.`,
                 imageFilePath: "/public/images/MM_03.jpg",
                 imageCaption: "Eberswalde, 1987. Bild mit freundlicher Genehmigung von Landesbetrieb Forst Eberswalde",
                 additionalContext: "",
-                prevLink: "intrvw_mm02.html",
-                nextLink: "intrvw_ot01.html",
+                prevLink: "intrvw_jr03.html",
+                nextLink: "intrvw_dhn01.html",
             },
         };
     </script>
