--- a/src/html/project.html
+++ b/src/html/project.html
@@ -11,12 +11,12 @@
 
         <main class="flex flex-col items-center justify-start font-crimson-text text-lg font-semibold tracking-tight mb-24">
             <!-- 1. -->
-            <div class="mb-6 flex items-center justify-between">
-                <div class="w-1/2 pr-8 text-justify">
+            <div class="mb-6 flex flex-col-reverse sm:flex-row items-center justify-between">
+                <div class="w-full sm:w-1/2 sm:pr-8 text-justify">
                     Brotherland berichtet von einer Zeit, von der man nur schwer erzählen kann. Die Komplexität der Wendejahre und ihr Erbe
                     wird durch die Kontextualisierung von Fotos, Archivmaterial und Portraits - verknüpft mit Interviews - dargestellt.
                 </div>
-                <div class="w-1/2 pl-8">
+                <div class="w-full mb-4 sm:mb-0 sm:w-1/2 sm:pl-8">
                     <div class="relative aspect-3/2 w-full">
                         <div class="h-full grayscale transition-[filter] ease-linear hover:grayscale-0">
                             <a href="virtual-exhibits/ve2.html" class="group">
@@ -34,19 +34,19 @@
                 </div>
             </div>
             <!-- 2. -->
-            <div class="mb-6 flex items-center justify-between">
-                <div class="w-4/5 pr-8">
+            <div class="mb-6 flex flex-col sm:flex-row items-center justify-between">
+                <div class="w-full  mb-4 sm:mb-0 sm:w-4/5 sm:pr-8">
                     <!-- Image placeholders: Zaninelli_Jakobs_BROTHERLAND_04.jpg -->
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jakobs_BROTHERLAND_04.jpg"
-                                class="cursor-ve absolute h-full w-full object-cover"
+                                class="cursor-ve  object-cover"
                             />
                         </a>
                     </div>
                 </div>
-                <div class="w-fit pl-8 text-justify">
+                <div class="w-fit sm:pl-8 text-justify">
                     <p>
                         Am 9. November 1989 fällt die Berliner Mauer und ein Jahr später wird Deutschland wiedervereinigt. Für viele ein
                         Fest, die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer
@@ -66,8 +66,8 @@
                 </div>
             </div>
             <!-- 3. -->
-            <div class="mb-6 flex items-center justify-between">
-                <div class="w-fit pr-8 text-justify">
+            <div class="mb-6 flex-col-reverse sm:flex-row flex items-center justify-between">
+                <div class="w-fit sm:pr-8 text-justify">
                     <p>
                         Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
                         Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
@@ -82,29 +82,29 @@
                         nationalistischer Einstellungen, die später zum mörderischen Terror des sogenannten NSU führten.
                     </p>
                 </div>
-                <div class="w-4/5 pl-8">
+                <div class="w-full  mb-4 sm:mb-0 sm:w-4/5 sm:pl-8">
                     <!-- Image placeholders:  -->
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jakobs_BROTHERLAND_03.jpg"
-                                class="cursor-ve absolute h-full w-full object-cover"
+                                class="cursor-ve object-cover"
                             />
                         </a>
                     </div>
                 </div>
             </div>
             <!-- 4. -->
-            <div class="my-8 flex items-center justify-between">
-                <div class="w-4/5 pr-8">
+            <div class="my-8 flex flex-col sm:flex-row items-center justify-between">
+                <div class=" mb-4 sm:mb-0 w-full sm:w-4/5 sm:pr-8">
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
                         <!-- Image placeholders: -->
                         <a href="virtual-exhibits/ve2.html" class="group">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg" class="cursor-ve w-full" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg" class="cursor-ve object-cover" />
                         </a>
                     </div>
                 </div>
-                <span class="w-fit pl-8">
+                <span class="w-fit sm:pl-8">
                     <p>
                         In der tagesaktuellen Berichterstattung und auch der Geschichtsschreibung kamen – und kommen – die Menschen, gegen
                         die sich diese Gewalt richtete, selten zu Wort. Auf die Fragen, wieso (deutsche) Jugendliche den Hitlergruß machen
