--- a/src/html/about.html
+++ b/src/html/about.html
@@ -10,8 +10,10 @@
         </header>
 
         <main class="m-auto">
-            <div class="flex h-full w-full items-start justify-between font-crimson-text text-lg font-semibold tracking-tight">
-                <div class="flex h-fit w-1/2 flex-col justify-start pr-6">
+            <div
+                class="flex h-full w-full flex-col items-start justify-between font-crimson-text text-lg font-semibold tracking-tight md:flex-row"
+            >
+                <div class="flex h-fit w-full flex-col justify-start md:w-1/2 md:pr-6">
                     <p class="text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
 
                     <p class="text-red-800 underline">Ausstellungen und Nominierungen</p>
@@ -35,7 +37,7 @@
                     <div>2021 – Landscapes of the Futures, Castelnuovo Fotografia – Castelnuovo di Porto, Rom, IT</div>
                 </div>
 
-                <div class="h-96 w-1/2 pl-6">
+                <div class="h-96 w-full md:w-1/2 md:pl-6">
                     <p class="text-red-800 underline">Kontakt</p>
                     <span><a href="mailto:brotherland@riseup.net">brotherland@riseup.net</a></span>
                     <div class="h-4"></div>
